[gd_scene load_steps=10 format=4 uid="uid://dko1ldfifobnn"]

[ext_resource type="Script" path="res://scenes/Stages/Stage.gd" id="1_vyele"]
[ext_resource type="AudioStream" uid="uid://6eg00db4lry5" path="res://music/Guerrilla Stage.mp3" id="4_6r0jx"]
[ext_resource type="PackedScene" uid="uid://bdurhvklic0ac" path="res://scenes/HUD.tscn" id="4_q2xlv"]
[ext_resource type="PackedScene" uid="uid://b8vqvqer5c6o3" path="res://scenes/Objects/Enemies/commando_joe.tscn" id="5_vldis"]
[ext_resource type="PackedScene" uid="uid://bingbkdyjdsbs" path="res://scenes/Objects/Players/start_position.tscn" id="6_211mx"]
[ext_resource type="TileSet" uid="uid://bdqyt5eh73er6" path="res://tilesets/guerilla.tres" id="7_3buwc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pch6m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ry4bj"]
size = Vector2(2638, 162.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fa34e"]
size = Vector2(1773, 1)

[node name="Guerrilla Man" type="Node2D"]
script = ExtResource("1_vyele")

[node name="Background" type="Node2D" parent="."]

[node name="DeepBG" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.65, 0.8)
repeat_size = Vector2(384, 0)
repeat_times = 2

[node name="TileMapLayer" type="TileMapLayer" parent="Background/DeepBG"]
tile_map_data = PackedByteArray("AAAAAAsAAAAIAAQAAAABAAsAAAAJAAQAAAACAAsAAAAIAAQAAAADAAsAAAAJAAQAAAAEAAsAAAAIAAQAAAAFAAsAAAAJAAQAAAAGAAsAAAAIAAQAAAAHAAsAAAAJAAQAAAAIAAsAAAAIAAQAAAAJAAsAAAAJAAQAAAAKAAsAAAAIAAQAAAALAAsAAAAJAAQAAAAMAAsAAAAIAAQAAAANAAsAAAAJAAQAAAAOAAsAAAAIAAQAAAAPAAsAAAAJAAQAAAAQAAsAAAAIAAQAAAARAAsAAAAJAAQAAAASAAsAAAAIAAQAAAATAAsAAAAJAAQAAAAUAAsAAAAIAAQAAAAVAAsAAAAJAAQAAAAWAAsAAAAIAAQAAAAXAAsAAAAJAAQAAAAAAPj/AAAIAAAAAAAAAPn/AAAIAAAAAAAAAPr/AAAIAAAAAAAAAPv/AAAIAAAAAAAAAPz/AAAIAAAAAAAAAP3/AAAIAAAAAAAAAP7/AAAIAAAAAAAAAP//AAAIAAAAAAAAAAAAAAAIAAAAAAABAPj/AAAIAAAAAAABAPn/AAAIAAAAAAABAPr/AAAIAAAAAAABAPv/AAAIAAAAAAABAPz/AAAIAAAAAAABAP3/AAAIAAAAAAABAP7/AAAIAAAAAAABAP//AAAIAAAAAAABAAAAAAAIAAAAAAACAPj/AAAIAAAAAAACAPn/AAAIAAAAAAACAPr/AAAIAAAAAAACAPv/AAAIAAAAAAACAPz/AAAIAAAAAAACAP3/AAAIAAAAAAACAP7/AAAIAAAAAAACAP//AAAIAAAAAAACAAAAAAAIAAAAAAADAPj/AAAIAAAAAAADAPn/AAAIAAAAAAADAPr/AAAIAAAAAAADAPv/AAAIAAAAAAADAPz/AAAIAAAAAAADAP3/AAAIAAAAAAADAP7/AAAIAAAAAAADAP//AAAIAAAAAAADAAAAAAAIAAAAAAAEAPj/AAAIAAAAAAAEAPn/AAAIAAAAAAAEAPr/AAAIAAAAAAAEAPv/AAAIAAAAAAAEAPz/AAAIAAAAAAAEAP3/AAAIAAAAAAAEAP7/AAAIAAAAAAAEAP//AAAIAAAAAAAEAAAAAAAIAAAAAAAFAPj/AAAIAAAAAAAFAPn/AAAIAAAAAAAFAPr/AAAIAAAAAAAFAPv/AAAIAAAAAAAFAPz/AAAIAAAAAAAFAP3/AAAIAAAAAAAFAP7/AAAIAAAAAAAFAP//AAAIAAAAAAAFAAAAAAAIAAAAAAAGAPj/AAAIAAAAAAAGAPn/AAAIAAAAAAAGAPr/AAAIAAAAAAAGAPv/AAAIAAAAAAAGAPz/AAAIAAAAAAAGAP3/AAAIAAAAAAAGAP7/AAAIAAAAAAAGAP//AAAIAAAAAAAGAAAAAAAIAAAAAAAHAPj/AAAIAAAAAAAHAPn/AAAIAAAAAAAHAPr/AAAIAAAAAAAHAPv/AAAIAAAAAAAHAPz/AAAIAAAAAAAHAP3/AAAIAAAAAAAHAP7/AAAIAAAAAAAHAP//AAAIAAAAAAAHAAAAAAAIAAAAAAAIAPj/AAAIAAAAAAAIAPn/AAAIAAAAAAAIAPr/AAAIAAAAAAAIAPv/AAAIAAAAAAAIAPz/AAAIAAAAAAAIAP3/AAAIAAAAAAAIAP7/AAAIAAAAAAAIAP//AAAIAAAAAAAIAAAAAAAIAAAAAAAJAPj/AAAIAAAAAAAJAPn/AAAIAAAAAAAJAPr/AAAIAAAAAAAJAPv/AAAIAAAAAAAJAPz/AAAIAAAAAAAJAP3/AAAIAAAAAAAJAP7/AAAIAAAAAAAJAP//AAAIAAAAAAAJAAAAAAAIAAAAAAAKAPj/AAAIAAAAAAAKAPn/AAAIAAAAAAAKAPr/AAAIAAAAAAAKAPv/AAAIAAAAAAAKAPz/AAAIAAAAAAAKAP3/AAAIAAAAAAAKAP7/AAAIAAAAAAAKAP//AAAIAAAAAAAKAAAAAAAIAAAAAAALAPj/AAAIAAAAAAALAPn/AAAIAAAAAAALAPr/AAAIAAAAAAALAPv/AAAIAAAAAAALAPz/AAAIAAAAAAALAP3/AAAIAAAAAAALAP7/AAAIAAAAAAALAP//AAAIAAAAAAALAAAAAAAIAAAAAAAMAPj/AAAIAAAAAAAMAPn/AAAIAAAAAAAMAPr/AAAIAAAAAAAMAPv/AAAIAAAAAAAMAPz/AAAIAAAAAAAMAP3/AAAIAAAAAAAMAP7/AAAIAAAAAAAMAP//AAAIAAAAAAAMAAAAAAAIAAAAAAANAPj/AAAIAAAAAAANAPn/AAAIAAAAAAANAPr/AAAIAAAAAAANAPv/AAAIAAAAAAANAPz/AAAIAAAAAAANAP3/AAAIAAAAAAANAP7/AAAIAAAAAAANAP//AAAIAAAAAAANAAAAAAAIAAAAAAAOAPj/AAAIAAAAAAAOAPn/AAAIAAAAAAAOAPr/AAAIAAAAAAAOAPv/AAAIAAAAAAAOAPz/AAAIAAAAAAAOAP3/AAAIAAAAAAAOAP7/AAAIAAAAAAAOAP//AAAIAAAAAAAOAAAAAAAIAAAAAAAPAPj/AAAIAAAAAAAPAPn/AAAIAAAAAAAPAPr/AAAIAAAAAAAPAPv/AAAIAAAAAAAPAPz/AAAIAAAAAAAPAP3/AAAIAAAAAAAPAP7/AAAIAAAAAAAPAP//AAAIAAAAAAAPAAAAAAAIAAAAAAAQAPj/AAAIAAAAAAAQAPn/AAAIAAAAAAAQAPr/AAAIAAAAAAAQAPv/AAAIAAAAAAAQAPz/AAAIAAAAAAAQAP3/AAAIAAAAAAAQAP7/AAAIAAAAAAAQAP//AAAIAAAAAAAQAAAAAAAIAAAAAAARAPj/AAAIAAAAAAARAPn/AAAIAAAAAAARAPr/AAAIAAAAAAARAPv/AAAIAAAAAAARAPz/AAAIAAAAAAARAP3/AAAIAAAAAAARAP7/AAAIAAAAAAARAP//AAAIAAAAAAARAAAAAAAIAAAAAAASAPj/AAAIAAAAAAASAPn/AAAIAAAAAAASAPr/AAAIAAAAAAASAPv/AAAIAAAAAAASAPz/AAAIAAAAAAASAP3/AAAIAAAAAAASAP7/AAAIAAAAAAASAP//AAAIAAAAAAASAAAAAAAIAAAAAAATAPj/AAAIAAAAAAATAPn/AAAIAAAAAAATAPr/AAAIAAAAAAATAPv/AAAIAAAAAAATAPz/AAAIAAAAAAATAP3/AAAIAAAAAAATAP7/AAAIAAAAAAATAP//AAAIAAAAAAATAAAAAAAIAAAAAAAUAPj/AAAIAAAAAAAUAPn/AAAIAAAAAAAUAPr/AAAIAAAAAAAUAPv/AAAIAAAAAAAUAPz/AAAIAAAAAAAUAP3/AAAIAAAAAAAUAP7/AAAIAAAAAAAUAP//AAAIAAAAAAAUAAAAAAAIAAAAAAAVAPj/AAAIAAAAAAAVAPn/AAAIAAAAAAAVAPr/AAAIAAAAAAAVAPv/AAAIAAAAAAAVAPz/AAAIAAAAAAAVAP3/AAAIAAAAAAAVAP7/AAAIAAAAAAAVAP//AAAIAAAAAAAVAAAAAAAIAAAAAAAWAPj/AAAIAAAAAAAWAPn/AAAIAAAAAAAWAPr/AAAIAAAAAAAWAPv/AAAIAAAAAAAWAPz/AAAIAAAAAAAWAP3/AAAIAAAAAAAWAP7/AAAIAAAAAAAWAP//AAAIAAAAAAAWAAAAAAAIAAAAAAAXAPj/AAAIAAAAAAAXAPn/AAAIAAAAAAAXAPr/AAAIAAAAAAAXAPv/AAAIAAAAAAAXAPz/AAAIAAAAAAAXAP3/AAAIAAAAAAAXAP7/AAAIAAAAAAAXAP//AAAIAAAAAAAXAAAAAAAIAAAAAAAAAAIAAAAMAAAAAAAAAAMAAAAMAAEAAAAAAAQAAAAMAAIAAAABAAQAAAANAAIAAAACAAQAAAAMAAIAAAACAAMAAAAMAAEAAAADAAMAAAANAAEAAAAEAAMAAAAMAAEAAAAFAAMAAAANAAEAAAAGAAMAAAAMAAEAAAAHAAMAAAANAAEAAAAIAAMAAAAMAAEAAAAJAAMAAAANAAEAAAAKAAMAAAAMAAEAAAALAAMAAAANAAEAAAAMAAMAAAAMAAEAAAANAAMAAAANAAEAAAAOAAMAAAAMAAEAAAAPAAMAAAANAAEAAAAQAAMAAAAMAAEAAAARAAMAAAANAAEAAAASAAMAAAAMAAEAAAATAAMAAAANAAEAAAAUAAMAAAAMAAEAAAAVAAMAAAANAAEAAAAWAAMAAAAMAAEAAAAXAAMAAAANAAEAAAAXAAQAAAANAAIAAAAWAAQAAAAMAAIAAAAVAAQAAAANAAIAAAAUAAQAAAAMAAIAAAATAAQAAAANAAIAAAASAAQAAAAMAAIAAAARAAQAAAANAAIAAAAQAAQAAAAMAAIAAAAPAAQAAAANAAIAAAAOAAQAAAAMAAIAAAANAAQAAAANAAIAAAAMAAQAAAAMAAIAAAALAAQAAAANAAIAAAAKAAQAAAAMAAIAAAAJAAQAAAANAAIAAAAIAAQAAAAMAAIAAAAHAAQAAAANAAIAAAAGAAQAAAAMAAIAAAAFAAQAAAANAAIAAAAEAAQAAAAMAAIAAAADAAQAAAANAAIAAAABAAMAAAANAAEAAAABAAIAAAANAAAAAAACAAIAAAAMAAAAAAADAAIAAAANAAAAAAAEAAIAAAAMAAAAAAAFAAIAAAANAAAAAAAGAAIAAAAMAAAAAAAHAAIAAAANAAAAAAAIAAIAAAAMAAAAAAAJAAIAAAANAAAAAAAKAAIAAAAMAAAAAAALAAIAAAANAAAAAAAMAAIAAAAMAAAAAAANAAIAAAANAAAAAAAOAAIAAAAMAAAAAAAPAAIAAAANAAAAAAAQAAIAAAAMAAAAAAARAAIAAAANAAAAAAASAAIAAAAMAAAAAAATAAIAAAANAAAAAAAUAAIAAAAMAAAAAAAVAAIAAAANAAAAAAAWAAIAAAAMAAAAAAAXAAIAAAANAAAAAAA=")
tile_set = ExtResource("7_3buwc")

[node name="FarGrass" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.75, 0.8)
repeat_size = Vector2(384, 0)
repeat_times = 2

[node name="TileMapLayer" type="TileMapLayer" parent="Background/FarGrass"]
tile_map_data = PackedByteArray("AAAAAAUAAAALAAEAAAABAAUAAAALAAEAAAACAAUAAAAKAAEAAAADAAUAAAALAAcAAAAEAAUAAAAJAAEAAAAFAAUAAAAJAAEAAAAGAAUAAAAJAAEAAAAHAAUAAAALAAcAAAAIAAUAAAAJAAEAAAAJAAUAAAAKAAEAAAAKAAUAAAALAAEAAAALAAUAAAALAAcAAAAMAAUAAAAJAAEAAAANAAUAAAAKAAEAAAAOAAUAAAALAAEAAAASAAUAAAAKAAEAAAARAAUAAAALAAEAAAAQAAUAAAALAAEAAAAWAAUAAAALAAEAAAAXAAUAAAALAAcAAAAPAAUAAAALAAcAAAATAAUAAAALAAcAAAAUAAUAAAAKAAEAAAAVAAUAAAAJAAEAAAAAAAIAAAAMAAMAAAABAAIAAAANAAMAAAACAAIAAAAOAAMAAAADAAIAAAALAAUAAAAEAAIAAAAMAAMAAAAHAAIAAAALAAUAAAAIAAIAAAAPAAMAAAAJAAIAAAAOAAMAAAAKAAIAAAAPAAMAAAALAAIAAAALAAUAAAAMAAIAAAANAAMAAAATAAIAAAALAAUAAAAUAAIAAAANAAMAAAAVAAIAAAAOAAMAAAAWAAIAAAAPAAMAAAAXAAIAAAALAAUAAAAOAAIAAAANAAMAAAAPAAIAAAALAAUAAAAQAAIAAAAMAAMAAAARAAIAAAANAAMAAAASAAIAAAAOAAMAAAANAAIAAAAMAAMAAAAFAAIAAAAMAAMAAAAGAAIAAAANAAMAAAAAAAsAAAAKAAQAAAABAAsAAAALAAQAAAACAAsAAAAKAAQAAAADAAsAAAALAAQAAAAEAAsAAAAKAAQAAAAFAAsAAAALAAQAAAAGAAsAAAAKAAQAAAAHAAsAAAALAAQAAAAIAAsAAAAKAAQAAAAJAAsAAAALAAQAAAAKAAsAAAAKAAQAAAALAAsAAAALAAQAAAAMAAsAAAAKAAQAAAANAAsAAAALAAQAAAAOAAsAAAAKAAQAAAAPAAsAAAALAAQAAAAQAAsAAAAKAAQAAAARAAsAAAALAAQAAAASAAsAAAAKAAQAAAATAAsAAAALAAQAAAAUAAsAAAAKAAQAAAAVAAsAAAALAAQAAAAWAAsAAAAKAAQAAAAXAAsAAAALAAQAAAAXAAMAAAALAAYAAAAXAAQAAAALAAYAAAADAAMAAAALAAYAAAADAAQAAAALAAYAAAAHAAMAAAALAAYAAAAHAAQAAAALAAYAAAALAAMAAAALAAYAAAALAAQAAAALAAYAAAAPAAMAAAALAAYAAAAPAAQAAAALAAYAAAATAAMAAAALAAYAAAATAAQAAAALAAYAAAA=")
tile_set = ExtResource("7_3buwc")

[node name="CloseGrass" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.9, 0.8)
repeat_size = Vector2(384, 0)
repeat_times = 2

[node name="TileMapLayer" type="TileMapLayer" parent="Background/CloseGrass"]
tile_map_data = PackedByteArray("AAAAAAYAAAAIAAIAAAABAAYAAAAJAAIAAAACAAYAAAAIAAIAAAADAAYAAAAJAAIAAAAEAAYAAAAIAAIAAAAFAAYAAAAJAAIAAAAGAAYAAAAKAAIAAAAHAAYAAAALAAIAAAAIAAYAAAAIAAIAAAAJAAYAAAAJAAIAAAAKAAYAAAAKAAIAAAALAAYAAAALAAIAAAAMAAYAAAAIAAIAAAANAAYAAAAJAAIAAAAOAAYAAAAKAAIAAAAPAAYAAAAIAAIAAAAQAAYAAAAJAAIAAAARAAYAAAAKAAIAAAASAAYAAAAKAAIAAAATAAYAAAALAAIAAAAUAAYAAAAIAAIAAAAVAAYAAAALAAIAAAAWAAYAAAAJAAIAAAAXAAYAAAALAAIAAAAAAAcAAAAIAAMAAAABAAcAAAAIAAMAAAACAAcAAAAIAAMAAAADAAcAAAAIAAMAAAAEAAcAAAAIAAMAAAAFAAcAAAAIAAMAAAAGAAcAAAAIAAMAAAAHAAcAAAAIAAMAAAAIAAcAAAAIAAMAAAAJAAcAAAAIAAMAAAAKAAcAAAAIAAMAAAALAAcAAAAIAAMAAAAMAAcAAAAIAAMAAAANAAcAAAAIAAMAAAAOAAcAAAAIAAMAAAAPAAcAAAAIAAMAAAAQAAcAAAAIAAMAAAARAAcAAAAIAAMAAAASAAcAAAAIAAMAAAATAAcAAAAIAAMAAAAUAAcAAAAIAAMAAAAVAAcAAAAIAAMAAAAWAAcAAAAIAAMAAAAXAAcAAAAIAAMAAAAAAAwAAAAIAAUAAAABAAwAAAAJAAUAAAACAAwAAAAIAAUAAAADAAwAAAAJAAUAAAAAAA0AAAAIAAYAAAABAA0AAAAJAAYAAAACAA0AAAAIAAYAAAADAA0AAAAJAAYAAAACAA4AAAAIAAYAAAADAA4AAAAJAAYAAAAAAA4AAAAIAAYAAAABAA4AAAAJAAYAAAAAAA8AAAAIAAYAAAABAA8AAAAJAAYAAAACAA8AAAAIAAYAAAADAA8AAAAJAAYAAAACABAAAAAIAAYAAAADABAAAAAJAAYAAAAAABAAAAAIAAYAAAABABAAAAAJAAYAAAAAABEAAAAIAAYAAAABABEAAAAJAAYAAAACABEAAAAIAAYAAAADABEAAAAJAAYAAAAEAAwAAAAIAAUAAAAFAAwAAAAJAAUAAAAGAAwAAAAIAAUAAAAHAAwAAAAJAAUAAAAIAAwAAAAIAAUAAAAJAAwAAAAJAAUAAAAKAAwAAAAIAAUAAAALAAwAAAAJAAUAAAAMAAwAAAAIAAUAAAANAAwAAAAJAAUAAAAOAAwAAAAIAAUAAAAPAAwAAAAJAAUAAAAOAA0AAAAIAAYAAAAPAA0AAAAJAAYAAAAQAA0AAAAIAAYAAAARAA0AAAAJAAYAAAAQAAwAAAAIAAUAAAARAAwAAAAJAAUAAAASAAwAAAAIAAUAAAATAAwAAAAJAAUAAAAUAAwAAAAIAAUAAAAVAAwAAAAJAAUAAAAWAAwAAAAIAAUAAAAWABEAAAAIAAYAAAAXABEAAAAJAAYAAAAWABAAAAAIAAYAAAAXABAAAAAJAAYAAAAWAA8AAAAIAAYAAAAWAA4AAAAIAAYAAAAWAA0AAAAIAAYAAAAUAA0AAAAIAAYAAAAVAA0AAAAJAAYAAAASAA0AAAAIAAYAAAATAA0AAAAJAAYAAAAMAA0AAAAIAAYAAAANAA0AAAAJAAYAAAAKAA0AAAAIAAYAAAALAA0AAAAJAAYAAAAIAA0AAAAIAAYAAAAJAA0AAAAJAAYAAAAGAA0AAAAIAAYAAAAHAA0AAAAJAAYAAAAEAA0AAAAIAAYAAAAFAA0AAAAJAAYAAAAEAA4AAAAIAAYAAAAFAA4AAAAJAAYAAAAEAA8AAAAIAAYAAAAFAA8AAAAJAAYAAAAGAA8AAAAIAAYAAAAHAA8AAAAJAAYAAAAIAA8AAAAIAAYAAAAJAA8AAAAJAAYAAAAIAA4AAAAIAAYAAAAJAA4AAAAJAAYAAAAGAA4AAAAIAAYAAAAHAA4AAAAJAAYAAAAKAA4AAAAIAAYAAAALAA4AAAAJAAYAAAAKAA8AAAAIAAYAAAALAA8AAAAJAAYAAAAIABAAAAAIAAYAAAAJABAAAAAJAAYAAAAGABAAAAAIAAYAAAAHABAAAAAJAAYAAAAEABAAAAAIAAYAAAAFABAAAAAJAAYAAAAEABEAAAAIAAYAAAAFABEAAAAJAAYAAAAGABEAAAAIAAYAAAAHABEAAAAJAAYAAAAIABEAAAAIAAYAAAAJABEAAAAJAAYAAAAKABEAAAAIAAYAAAALABEAAAAJAAYAAAAMABEAAAAIAAYAAAANABEAAAAJAAYAAAAOABEAAAAIAAYAAAAPABEAAAAJAAYAAAAQABEAAAAIAAYAAAARABEAAAAJAAYAAAASABEAAAAIAAYAAAATABEAAAAJAAYAAAAUABEAAAAIAAYAAAAVABEAAAAJAAYAAAAUABAAAAAIAAYAAAAVABAAAAAJAAYAAAASABAAAAAIAAYAAAATABAAAAAJAAYAAAAQABAAAAAIAAYAAAARABAAAAAJAAYAAAAOABAAAAAIAAYAAAAPABAAAAAJAAYAAAAMABAAAAAIAAYAAAANABAAAAAJAAYAAAAKABAAAAAIAAYAAAALABAAAAAJAAYAAAAMAA8AAAAIAAYAAAANAA8AAAAJAAYAAAAOAA8AAAAIAAYAAAAPAA8AAAAJAAYAAAAQAA8AAAAIAAYAAAARAA8AAAAJAAYAAAASAA8AAAAIAAYAAAATAA8AAAAJAAYAAAAUAA8AAAAIAAYAAAAVAA8AAAAJAAYAAAAQAA4AAAAIAAYAAAARAA4AAAAJAAYAAAAOAA4AAAAIAAYAAAAPAA4AAAAJAAYAAAAMAA4AAAAIAAYAAAANAA4AAAAJAAYAAAASAA4AAAAIAAYAAAATAA4AAAAJAAYAAAAUAA4AAAAIAAYAAAAVAA4AAAAJAAYAAAAAAAgAAAAIAAAAAAAAAAkAAAAIAAAAAAAAAAoAAAAIAAAAAAABAAoAAAAIAAAAAAACAAoAAAAIAAAAAAADAAoAAAAIAAAAAAAEAAoAAAAIAAAAAAAFAAoAAAAIAAAAAAAGAAoAAAAIAAAAAAAHAAkAAAAIAAAAAAAIAAkAAAAIAAAAAAAJAAkAAAAIAAAAAAAKAAkAAAAIAAAAAAALAAkAAAAIAAAAAAAMAAkAAAAIAAAAAAANAAkAAAAIAAAAAAAOAAkAAAAIAAAAAAAOAAoAAAAIAAAAAAAPAAoAAAAIAAAAAAAQAAoAAAAIAAAAAAARAAoAAAAIAAAAAAASAAoAAAAIAAAAAAATAAoAAAAIAAAAAAAUAAoAAAAIAAAAAAAVAAoAAAAIAAAAAAAWAAoAAAAIAAAAAAAXAAoAAAAIAAAAAAAXAAkAAAAIAAAAAAAXAAgAAAAIAAAAAAAWAAgAAAAIAAAAAAAVAAgAAAAIAAAAAAAUAAgAAAAIAAAAAAATAAgAAAAIAAAAAAASAAgAAAAIAAAAAAARAAgAAAAIAAAAAAAQAAgAAAAIAAAAAAAPAAgAAAAIAAAAAAAOAAgAAAAIAAAAAAANAAgAAAAIAAAAAAAMAAgAAAAIAAAAAAALAAgAAAAIAAAAAAAGAAkAAAAIAAAAAAAFAAkAAAAIAAAAAAAEAAkAAAAIAAAAAAADAAkAAAAIAAAAAAACAAkAAAAIAAAAAAABAAkAAAAIAAAAAAABAAgAAAAIAAAAAAACAAgAAAAIAAAAAAADAAgAAAAIAAAAAAAEAAgAAAAIAAAAAAAFAAgAAAAIAAAAAAAGAAgAAAAIAAAAAAAHAAgAAAAIAAAAAAAIAAgAAAAIAAAAAAAJAAgAAAAIAAAAAAAKAAgAAAAIAAAAAAATAAkAAAAIAAAAAAAUAAkAAAAIAAAAAAAVAAkAAAAIAAAAAAAWAAkAAAAIAAAAAAASAAkAAAAIAAAAAAARAAkAAAAIAAAAAAAQAAkAAAAIAAAAAAAPAAkAAAAIAAAAAAAHAAoAAAAIAAAAAAAIAAoAAAAIAAAAAAAJAAoAAAAIAAAAAAAKAAoAAAAIAAAAAAALAAoAAAAIAAAAAAAMAAoAAAAIAAAAAAANAAoAAAAIAAAAAAAXAAwAAAAJAAUAAAAXAA0AAAAJAAYAAAAXAA4AAAAJAAYAAAAXAA8AAAAJAAYAAAAUAAEAAAAMAAQAAAAVAAEAAAANAAQAAAAWAAEAAAAOAAQAAAAXAAEAAAAPAAQAAAAQAAEAAAAMAAQAAAARAAEAAAANAAQAAAASAAEAAAAOAAQAAAATAAEAAAAPAAQAAAAMAAEAAAAMAAQAAAANAAEAAAANAAQAAAAOAAEAAAAOAAQAAAAPAAEAAAAPAAQAAAAIAAEAAAAMAAQAAAAJAAEAAAANAAQAAAAKAAEAAAAOAAQAAAALAAEAAAAPAAQAAAAEAAEAAAAMAAQAAAAFAAEAAAANAAQAAAAGAAEAAAAOAAQAAAAHAAEAAAAPAAQAAAAAAAEAAAAMAAQAAAABAAEAAAANAAQAAAACAAEAAAAOAAQAAAADAAEAAAAPAAQAAAA=")
tile_set = ExtResource("7_3buwc")

[node name="ClosestLayer" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.97, 0.8)
repeat_size = Vector2(384, 0)
repeat_times = 2

[node name="TileMapLayer" type="TileMapLayer" parent="Background/ClosestLayer"]
tile_map_data = PackedByteArray("AAAUAAAAAAAMAAUAAAAUAAEAAAAMAAYAAAAVAAAAAAANAAUAAAAVAAEAAAANAAYAAAAWAAAAAAAOAAUAAAAWAAEAAAAOAAYAAAAXAAAAAAAPAAUAAAAXAAEAAAAPAAYAAAAQAAAAAAAMAAUAAAAQAAEAAAAMAAYAAAARAAAAAAANAAUAAAARAAEAAAANAAYAAAASAAAAAAAOAAUAAAASAAEAAAAOAAYAAAATAAAAAAAPAAUAAAATAAEAAAAPAAYAAAAMAAAAAAAMAAUAAAAMAAEAAAAMAAYAAAANAAAAAAANAAUAAAANAAEAAAANAAYAAAAOAAAAAAAOAAUAAAAOAAEAAAAOAAYAAAAPAAAAAAAPAAUAAAAPAAEAAAAPAAYAAAAIAAAAAAAMAAUAAAAIAAEAAAAMAAYAAAAJAAAAAAANAAUAAAAJAAEAAAANAAYAAAAKAAAAAAAOAAUAAAAKAAEAAAAOAAYAAAALAAAAAAAPAAUAAAALAAEAAAAPAAYAAAAEAAAAAAAMAAUAAAAEAAEAAAAMAAYAAAAFAAAAAAANAAUAAAAFAAEAAAANAAYAAAAGAAAAAAAOAAUAAAAGAAEAAAAOAAYAAAAHAAAAAAAPAAUAAAAHAAEAAAAPAAYAAAAAAAAAAAAMAAUAAAAAAAEAAAAMAAYAAAABAAAAAAANAAUAAAABAAEAAAANAAYAAAACAAAAAAAOAAUAAAACAAEAAAAOAAYAAAADAAAAAAAPAAUAAAADAAEAAAAPAAYAAAA=")
tile_set = ExtResource("7_3buwc")

[node name="Layer0" type="TileMapLayer" parent="."]
texture_filter = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAVAAoAAAAAAAAAAAAWAAoAAAAAAAAAAAAXAAoAAAAAAAAAAAAYAAoAAAAAAAAAAAAZAAoAAAAAAAAAAAAaAAoAAAAAAAAAAAAbAAoAAAAAAAAAAAAcAAoAAAAAAAAAAAAdAAoAAAAAAAAAAAAeAAoAAAAAAAAAAAAfAAoAAAAAAAAAAAAgAAoAAAAAAAAAAAAhAAoAAAAAAAAAAAAiAAoAAAAAAAAAAAAjAAoAAAAAAAAAAAAkAAoAAAAAAAAAAAAlAAoAAAAAAAAAAAAmAAoAAAAAAAAAAAAnAAoAAAAAAAAAAAAoAAoAAAAAAAAAAAAeAAUAAAAAAAAAAAAfAAUAAAAAAAAAAAAgAAUAAAAAAAAAAAAhAAUAAAAAAAAAAAAiAAUAAAAAAAAAAAAjAAUAAAAAAAAAAAAkAAUAAAAAAAAAAAAiAAYAAAAAAAAAAAAhAAYAAAAAAAAAAAAgAAYAAAAAAAAAAAAfAAYAAAAAAAAAAAAeAAYAAAAAAAAAAAAkAAgAAAAAAAAAAAAjAAgAAAAAAAAAAAAiAAgAAAAAAAAAAAAhAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAfAAgAAAAAAAAAAAAeAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAADAAoAAAAAAAAAAAACAAoAAAAAAAAAAAABAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAYAAAAAAAAAAAANAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAADAAcAAAAAAAAAAAACAAcAAAAAAAAAAAABAAcAAAAAAAAAAAAAAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAQAAcAAAAAAAAAAAARAAYAAAAAAAAAAAASAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAATAAcAAAAAAAAAAAAUAAcAAAAAAAAAAAAVAAcAAAAAAAAAAAAWAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAZAAgAAAAAAAAAAAAaAAgAAAAAAAAAAAAbAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAdAAgAAAAAAAAAAAAkAAYAAAAAAAAAAAAjAAYAAAAAAAAAAAAlAAgAAAAAAAAAAAAmAAgAAAAAAAAAAAAnAAgAAAAAAAAAAAATAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAVAAgAAAAAAAAAAAAWAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAUAAkAAAAAAAAAAAAWAAkAAAAAAAAAAAAXAAkAAAAAAAAAAAAYAAkAAAAAAAAAAAATAAkAAAAAAAAAAAAZAAkAAAAAAAAAAAAaAAkAAAAAAAAAAAAbAAkAAAAAAAAAAAAcAAkAAAAAAAAAAAATAAoAAAAAAAAAAAAUAAoAAAAAAAAAAAAnAAkAAAAAAAAAAAApAAoAAAAAAAAAAAAmAAkAAAAAAAAAAAAlAAkAAAAAAAAAAAAkAAkAAAAAAAAAAAAjAAkAAAAAAAAAAAAiAAkAAAAAAAAAAAAhAAkAAAAAAAAAAAAgAAkAAAAAAAAAAAAfAAkAAAAAAAAAAAAeAAkAAAAAAAAAAAAdAAkAAAAAAAAAAAAoAAgAAAAAAAAAAAApAAgAAAAAAAAAAAAqAAgAAAAAAAAAAAAoAAkAAAAAAAAAAAApAAkAAAAAAAAAAAAqAAkAAAAAAAAAAAArAAkAAAAAAAAAAAAsAAkAAAAAAAAAAAAtAAkAAAAAAAAAAAAuAAkAAAAAAAAAAAAvAAoAAAAAAAAAAAAwAAoAAAAAAAAAAAAuAAoAAAAAAAAAAAAtAAoAAAAAAAAAAAAsAAoAAAAAAAAAAAArAAoAAAAAAAAAAAAvAAkAAAAAAAAAAAAwAAkAAAAAAAAAAAAxAAkAAAAAAAAAAAAyAAkAAAAAAAAAAAAzAAkAAAAAAAAAAAArAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAtAAgAAAAAAAAAAAAuAAgAAAAAAAAAAAAvAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAAxAAgAAAAAAAAAAAAqAAoAAAAAAAAAAAAsAAcAAAAAAAAAAAAtAAcAAAAAAAAAAAArAAcAAAAAAAAAAAAqAAcAAAAAAAAAAAApAAcAAAAAAAAAAAA0AAMAAAAAAAAAAAA1AAMAAAAAAAAAAAA2AAMAAAAAAAAAAAA3AAMAAAAAAAAAAAA3AAQAAAAAAAAAAAA2AAUAAAAAAAAAAAA1AAUAAAAAAAAAAAA1AAQAAAAAAAAAAAA0AAQAAAAAAAAAAAA2AAQAAAAAAAAAAAA2AAYAAAAAAAAAAAA1AAYAAAAAAAAAAAA0AAYAAAAAAAAAAAA0AAUAAAAAAAAAAAA3AAYAAAAAAAAAAAA3AAUAAAAAAAAAAAA1AAoAAAAAAAAAAAA0AAoAAAAAAAAAAAAzAAoAAAAAAAAAAAAyAAoAAAAAAAAAAAAxAAoAAAAAAAAAAAA3AAoAAAAAAAAAAAA2AAoAAAAAAAAAAAAwAAUAAAAAAAAAAAAxAAUAAAAAAAAAAAA4AAoAAAAAAAAAAAA5AAoAAAAAAAAAAAA6AAoAAAAAAAAAAAA7AAoAAAAAAAAAAAA7AAkAAAAAAAAAAAA6AAkAAAAAAAAAAAA5AAkAAAAAAAAAAAA6AAgAAAAAAAAAAAA7AAgAAAAAAAAAAAA8AAgAAAAAAAAAAAA8AAkAAAAAAAAAAAA7AAsAAAAAAAAAAAA8AAsAAAAAAAAAAAA9AAoAAAAAAAAAAAA+AAoAAAAAAAAAAAA9AAsAAAAAAAAAAAA8AAwAAAAAAAAAAAA7AAwAAAAAAAAAAAA8AAoAAAAAAAAAAAA6AAsAAAAAAAAAAAA6AAwAAAAAAAAAAAA5AAwAAAAAAAAAAAA5AA0AAAAAAAAAAAA4AA0AAAAAAAAAAAA6AA0AAAAAAAAAAAA3AA0AAAAAAAAAAAA3AAwAAAAAAAAAAAA4AAwAAAAAAAAAAAA2AA0AAAAAAAAAAAA1AAwAAAAAAAAAAAA2AAsAAAAAAAAAAAA3AAsAAAAAAAAAAAA4AAsAAAAAAAAAAAA5AAsAAAAAAAAAAAA2AAwAAAAAAAAAAAA0AAwAAAAAAAAAAAAzAAwAAAAAAAAAAAAyAAwAAAAAAAAAAAAxAAwAAAAAAAAAAAAwAAwAAAAAAAAAAAAvAAsAAAAAAAAAAAAuAAsAAAAAAAAAAAAwAAsAAAAAAAAAAAAxAAsAAAAAAAAAAAAyAAsAAAAAAAAAAAAzAAsAAAAAAAAAAAA0AAsAAAAAAAAAAAA1AAsAAAAAAAAAAAA1AA0AAAAAAAAAAAA0AA0AAAAAAAAAAAAzAA0AAAAAAAAAAAAyAA0AAAAAAAAAAAAxAA0AAAAAAAAAAAAwAA0AAAAAAAAAAAAvAA0AAAAAAAAAAAAvAAwAAAAAAAAAAAAuAAwAAAAAAAAAAAAsAAsAAAAAAAAAAAArAAsAAAAAAAAAAAAqAAsAAAAAAAAAAAApAAsAAAAAAAAAAAAoAAsAAAAAAAAAAAAnAAsAAAAAAAAAAAAmAAsAAAAAAAAAAAAlAAsAAAAAAAAAAAAkAAsAAAAAAAAAAAAjAAsAAAAAAAAAAAAiAAsAAAAAAAAAAAAhAAsAAAAAAAAAAAAgAAsAAAAAAAAAAAAfAAsAAAAAAAAAAAAeAAsAAAAAAAAAAAAdAAsAAAAAAAAAAAAcAAsAAAAAAAAAAAAbAAsAAAAAAAAAAAAaAAsAAAAAAAAAAAAZAAsAAAAAAAAAAAAYAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAASAAsAAAAAAAAAAAATAAsAAAAAAAAAAAAUAAsAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAWAAwAAAAAAAAAAAAXAAwAAAAAAAAAAAAYAAwAAAAAAAAAAAAZAAwAAAAAAAAAAAAaAAwAAAAAAAAAAAAbAAwAAAAAAAAAAAAcAAwAAAAAAAAAAAAdAAwAAAAAAAAAAAAeAAwAAAAAAAAAAAAfAAwAAAAAAAAAAAAgAAwAAAAAAAAAAAAhAAwAAAAAAAAAAAAiAAwAAAAAAAAAAAAjAAwAAAAAAAAAAAAkAAwAAAAAAAAAAAAlAAwAAAAAAAAAAAAmAAwAAAAAAAAAAAAnAAwAAAAAAAAAAAAtAAsAAAAAAAAAAAAWAAsAAAAAAAAAAAAXAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAwAAAAAAAAAAAACAAwAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAwAAAAAAAAAAAAFAAwAAAAAAAAAAAAGAAwAAAAAAAAAAAAHAAwAAAAAAAAAAAAIAAwAAAAAAAAAAAAJAAwAAAAAAAAAAAAKAAwAAAAAAAAAAAALAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAwAAAAAAAAAAAAOAAwAAAAAAAAAAAAPAAwAAAAAAAAAAAAUAAwAAAAAAAAAAAATAAwAAAAAAAAAAAASAAwAAAAAAAAAAAARAAwAAAAAAAAAAAAQAAwAAAAAAAAAAAAFAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAADAAsAAAAAAAAAAAACAAsAAAAAAAAAAAABAAsAAAAAAAAAAAAoAAwAAAAAAAAAAAApAAwAAAAAAAAAAAAqAAwAAAAAAAAAAAArAAwAAAAAAAAAAAAsAAwAAAAAAAAAAAAtAAwAAAAAAAAAAAA9AAwAAAAAAAAAAAA8AA0AAAAAAAAAAAA7AA4AAAAAAAAAAAA6AA4AAAAAAAAAAAA5AA4AAAAAAAAAAAA4AA4AAAAAAAAAAAA3AA4AAAAAAAAAAAA2AA4AAAAAAAAAAAA1AA4AAAAAAAAAAAA0AA4AAAAAAAAAAAA+AAwAAAAAAAAAAAA/AAwAAAAAAAAAAABAAAwAAAAAAAAAAAA+AA0AAAAAAAAAAAA9AA4AAAAAAAAAAAA8AA4AAAAAAAAAAAA7AA8AAAAAAAAAAAA6AA8AAAAAAAAAAAA5AA8AAAAAAAAAAAA4ABAAAAAAAAAAAAA3ABAAAAAAAAAAAAA2ABAAAAAAAAAAAAA1ABAAAAAAAAAAAAA0ABAAAAAAAAAAAAA1AA8AAAAAAAAAAAA+AAsAAAAAAAAAAAA9AA0AAAAAAAAAAAA2ABEAAAAAAAAAAAA1ABEAAAAAAAAAAAA0ABEAAAAAAAAAAAAzABEAAAAAAAAAAAAzABAAAAAAAAAAAAA0AA8AAAAAAAAAAAA/AAsAAAAAAAAAAABAAAsAAAAAAAAAAABBAAsAAAAAAAAAAABCAAsAAAAAAAAAAABDAAsAAAAAAAAAAABEAAsAAAAAAAAAAABFAAsAAAAAAAAAAABFAAwAAAAAAAAAAABEAA0AAAAAAAAAAABDAA0AAAAAAAAAAABCAA4AAAAAAAAAAABBAA4AAAAAAAAAAABAAA4AAAAAAAAAAAA/AA4AAAAAAAAAAAA+AA4AAAAAAAAAAAA/AA0AAAAAAAAAAABAAA8AAAAAAAAAAAA/AA8AAAAAAAAAAAA+AA8AAAAAAAAAAAA9AA8AAAAAAAAAAAA8AA8AAAAAAAAAAAA7AA0AAAAAAAAAAABAAA0AAAAAAAAAAABBAA0AAAAAAAAAAABDAA4AAAAAAAAAAABEAA4AAAAAAAAAAABEAA8AAAAAAAAAAABFAA8AAAAAAAAAAABGAA8AAAAAAAAAAABHABAAAAAAAAAAAABIABAAAAAAAAAAAABJABAAAAAAAAAAAABKABEAAAAAAAAAAABKABAAAAAAAAAAAABHAA8AAAAAAAAAAABFAA4AAAAAAAAAAABGAA4AAAAAAAAAAABHAA4AAAAAAAAAAABIAA4AAAAAAAAAAABJAA4AAAAAAAAAAABKAA4AAAAAAAAAAABLAA4AAAAAAAAAAABMAA4AAAAAAAAAAABNAA4AAAAAAAAAAABNAA0AAAAAAAAAAABOAA0AAAAAAAAAAABPAA0AAAAAAAAAAABQAAwAAAAAAAAAAABRAAwAAAAAAAAAAABSAAwAAAAAAAAAAABSAAsAAAAAAAAAAABLAA8AAAAAAAAAAABKAA8AAAAAAAAAAABJAA8AAAAAAAAAAABIAA8AAAAAAAAAAABCAAwAAAAAAAAAAABBAAwAAAAAAAAAAABDAAwAAAAAAAAAAABCAA0AAAAAAAAAAABEAAwAAAAAAAAAAAA4AA8AAAAAAAAAAAA3AA8AAAAAAAAAAAA2AA8AAAAAAAAAAAAyABAAAAAAAAAAAAAxABAAAAAAAAAAAAAxAA8AAAAAAAAAAAAxAA4AAAAAAAAAAAAzAA4AAAAAAAAAAAAzAA8AAAAAAAAAAAAyAA8AAAAAAAAAAAAyAA4AAAAAAAAAAAAxABEAAAAAAAAAAAAyABEAAAAAAAAAAAA3ABEAAAAAAAAAAAA4ABEAAAAAAAAAAAA5ABEAAAAAAAAAAAA6ABEAAAAAAAAAAAA7ABEAAAAAAAAAAAA8ABEAAAAAAAAAAAA9ABEAAAAAAAAAAAA+ABEAAAAAAAAAAAA/ABEAAAAAAAAAAABAABEAAAAAAAAAAABBABEAAAAAAAAAAABCABEAAAAAAAAAAABDABEAAAAAAAAAAABEABEAAAAAAAAAAABFABEAAAAAAAAAAABGABEAAAAAAAAAAABHABEAAAAAAAAAAABIABEAAAAAAAAAAABJABEAAAAAAAAAAABGABAAAAAAAAAAAABFABAAAAAAAAAAAABEABAAAAAAAAAAAABDABAAAAAAAAAAAABCABAAAAAAAAAAAABBABAAAAAAAAAAAABAABAAAAAAAAAAAAA/ABAAAAAAAAAAAABDAA8AAAAAAAAAAABCAA8AAAAAAAAAAABBAA8AAAAAAAAAAAA+ABAAAAAAAAAAAAA9ABAAAAAAAAAAAAA8ABAAAAAAAAAAAAA7ABAAAAAAAAAAAAA6ABAAAAAAAAAAAAA5ABAAAAAAAAAAAAAwABAAAAAAAAAAAAAwABEAAAAAAAAAAAAvABEAAAAAAAAAAAAvABAAAAAAAAAAAAAvAA8AAAAAAAAAAAAvAA4AAAAAAAAAAAAwAA4AAAAAAAAAAAAwAA8AAAAAAAAAAABKAAkAAAAAAAAAAABLAAkAAAAAAAAAAABOAAUAAAAAAAAAAABNAAUAAAAAAAAAAABGAAQAAAAAAAAAAABHAAQAAAAAAAAAAABHAAYAAAAAAAAAAABIAAYAAAAAAAAAAAA=")
tile_set = ExtResource("7_3buwc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 112)
limit_left = 0
limit_bottom = 240

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6r0jx")
bus = &"Music"
parameters/looping = true

[node name="Level Objects" type="Node2D" parent="."]

[node name="Yoku Blocks" type="Node2D" parent="Level Objects"]

[node name="Enemies" type="Node2D" parent="Level Objects"]

[node name="Commando Joe" parent="Level Objects/Enemies" instance=ExtResource("5_vldis")]
position = Vector2(525, 72)

[node name="HUD" parent="." instance=ExtResource("4_q2xlv")]
visible = false

[node name="StartPosition" parent="." instance=ExtResource("6_211mx")]
position = Vector2(127, 80)

[node name="WaterLayer" type="Parallax2D" parent="."]
repeat_size = Vector2(64, 0)
autoscroll = Vector2(-20, 0)
repeat_times = 11

[node name="TileMapLayer" type="TileMapLayer" parent="WaterLayer"]
z_index = 25
material = SubResource("CanvasItemMaterial_pch6m")
tile_map_data = PackedByteArray("AAADAAcAAAADAAAAAAADAAgAAAADAAEAAAAEAAcAAAADAAAAAAAEAAgAAAADAAEAAAACAAcAAAADAAAAAAACAAgAAAADAAEAAAABAAkAAAADAAEAAAABAAoAAAADAAEAAAABAAsAAAADAAEAAAABAAwAAAADAAEAAAABAA0AAAADAAEAAAABAA4AAAADAAEAAAABAA8AAAADAAEAAAABABAAAAADAAEAAAABABEAAAADAAEAAAABABIAAAADAAEAAAABABMAAAADAAEAAAABABQAAAADAAEAAAABABUAAAADAAEAAAABABYAAAADAAEAAAABABcAAAADAAEAAAABABgAAAADAAEAAAABABkAAAADAAEAAAABABoAAAADAAEAAAABABsAAAADAAEAAAABABwAAAADAAEAAAABAB0AAAADAAEAAAABAB4AAAADAAEAAAABAB8AAAADAAEAAAABACAAAAADAAEAAAABACEAAAADAAEAAAABACIAAAADAAEAAAABACMAAAADAAEAAAABACQAAAADAAEAAAABACUAAAADAAEAAAABACYAAAADAAEAAAABACcAAAADAAEAAAACACcAAAADAAEAAAADACcAAAADAAEAAAAEACcAAAADAAEAAAAEACYAAAADAAEAAAAEACUAAAADAAEAAAAEACQAAAADAAEAAAAEACMAAAADAAEAAAAEACIAAAADAAEAAAAEACEAAAADAAEAAAAEACAAAAADAAEAAAAEAB8AAAADAAEAAAAEAB4AAAADAAEAAAAEAB0AAAADAAEAAAAEABwAAAADAAEAAAAEABsAAAADAAEAAAAEABoAAAADAAEAAAAEABkAAAADAAEAAAAEABgAAAADAAEAAAAEABcAAAADAAEAAAAEABYAAAADAAEAAAAEABUAAAADAAEAAAAEABQAAAADAAEAAAAEABMAAAADAAEAAAAEABIAAAADAAEAAAAEABEAAAADAAEAAAAEABAAAAADAAEAAAAEAA8AAAADAAEAAAAEAA4AAAADAAEAAAAEAA0AAAADAAEAAAAEAAwAAAADAAEAAAAEAAsAAAADAAEAAAAEAAoAAAADAAEAAAAEAAkAAAADAAEAAAADAAkAAAADAAEAAAADAAoAAAADAAEAAAACAAsAAAADAAEAAAACAAwAAAADAAEAAAACAA0AAAADAAEAAAACAA4AAAADAAEAAAACAA8AAAADAAEAAAACABAAAAADAAEAAAACABEAAAADAAEAAAACABIAAAADAAEAAAACABMAAAADAAEAAAACABQAAAADAAEAAAACABUAAAADAAEAAAACABYAAAADAAEAAAACABcAAAADAAEAAAACABgAAAADAAEAAAACABkAAAADAAEAAAACABoAAAADAAEAAAACABsAAAADAAEAAAACABwAAAADAAEAAAACAB0AAAADAAEAAAACAB4AAAADAAEAAAACAB8AAAADAAEAAAACACAAAAADAAEAAAADACAAAAADAAEAAAADACEAAAADAAEAAAADACIAAAADAAEAAAADACMAAAADAAEAAAADACQAAAADAAEAAAADACUAAAADAAEAAAADACYAAAADAAEAAAACACYAAAADAAEAAAACACUAAAADAAEAAAACACEAAAADAAEAAAACACIAAAADAAEAAAACACMAAAADAAEAAAACACQAAAADAAEAAAADABkAAAADAAEAAAADABgAAAADAAEAAAADABcAAAADAAEAAAADABYAAAADAAEAAAADABoAAAADAAEAAAADABsAAAADAAEAAAADABwAAAADAAEAAAADAB0AAAADAAEAAAADAB4AAAADAAEAAAADAB8AAAADAAEAAAADABUAAAADAAEAAAADABQAAAADAAEAAAADABMAAAADAAEAAAADABIAAAADAAEAAAADABEAAAADAAEAAAADABAAAAADAAEAAAADAA8AAAADAAEAAAADAA4AAAADAAEAAAADAA0AAAADAAEAAAADAAwAAAADAAEAAAADAAsAAAADAAEAAAACAAkAAAADAAEAAAACAAoAAAADAAEAAAABAAcAAAADAAAAAAABAAgAAAADAAEAAAA=")
tile_set = ExtResource("7_3buwc")

[node name="TileMapLayer2" type="TileMapLayer" parent="WaterLayer"]
z_index = 25
tile_map_data = PackedByteArray("AAADAAcAAAAGAAAAAAACAAcAAAAFAAAAAAABAAcAAAAEAAAAAAAEAAcAAAAHAAAAAAA=")
tile_set = ExtResource("7_3buwc")

[node name="Water" type="Area2D" parent="."]
collision_layer = 14
collision_mask = 14
gravity_space_override = 3
gravity = 400.0

[node name="Water" type="CollisionShape2D" parent="Water"]
position = Vector2(1287, 201.75)
shape = SubResource("RectangleShape2D_ry4bj")

[node name="SplashZone" type="Area2D" parent="."]
position = Vector2(-256, -176)
collision_layer = 14
collision_mask = 14
gravity_space_override = 3
gravity = 400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SplashZone"]
position = Vector2(838.5, 296.5)
shape = SubResource("RectangleShape2D_fa34e")

[connection signal="body_entered" from="Water" to="." method="_on_water_body_entered"]
[connection signal="body_exited" from="Water" to="." method="_on_water_body_exited"]
[connection signal="body_entered" from="SplashZone" to="." method="_on_splash_zone_body_entered"]
